[package]
name = "pronytic_script"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"

lalrpop = "0.22.2"
lalrpop-util = { version = "0.21.0", features = [ "unicode"] }
logos = { version = "0.15.0", features = ["debug"] }
miette = { version = "7.6.0", features = ["fancy"] }

thiserror = "2.0.12"
regex = "1.11.1"


[build-dependencies]
lalrpop = "0.22.2"
