[package]
name = "pronytic_script"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"

lalrpop = "0.22.2"
lalrpop-util = { version = "0.22.2", features = [ "unicode"] }
logos = { version = "0.15.1", features = ["debug"] }
miette = { version = "7.6.0", features = ["fancy"] }

thiserror = "2.0.17"
regex = "1.12.2"


[build-dependencies]
lalrpop = "0.22.2"
